--- a/src/components/TodayTasks/TodayTasks.module.css
+++ b/src/components/TodayTasks/TodayTasks.module.css
@@ -7,7 +7,7 @@
   @media (max-width: 768px) {
     .container {
       max-width: 100%;
-      margin-top: 0;
+      margin-top: 0 !important;
     }
   
     .container::after {
@@ -17,6 +17,7 @@
       height: 1px;
       background: #24293f;
       margin: 24px 0;
+      
     }
   }
   
@@ -24,10 +25,11 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    
   }
   
   .todayTasksMessage {
-    font-family: "Roboto";
+    font-family: "Montserrat";
     font-size: 1rem;
     line-height: 150%;
     font-weight: 700;
